unpackaged/main/default/objects/PagesApi__Form_Response__c/PagesApi__Form_Response__c.object-meta.xml
<CustomObject>
    <description>Object used to capture form submission attributes that parents Field Responses.</description>
    <label>Form Response</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>