unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/EventApi__Attendee__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link between the Form Response and the Attendee.</description>
    <inlineHelpText>** System Calculated ** Link between the Form Response and the Attendee.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>EventApi__Attendee__c</referenceTo>
    <relationshipLabel>Registration Form</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>