unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/EventApi__Registration_Group__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link between the Form Response and the Registration Group.</description>
    <inlineHelpText>** System Calculated ** Link between the Form Response and the Registration Group.</inlineHelpText>
    <label>Registration Group</label>
    <referenceTo>EventApi__Registration_Group__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>