unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/EventApi__Registration_Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link between the Form Response and the Registration Item.</description>
    <inlineHelpText>** System Calculated ** Link between the Form Response and the Registration Item.</inlineHelpText>
    <label>Registration Item</label>
    <referenceTo>EventApi__Registration_Item__c</referenceTo>
    <relationshipLabel>Registration Form</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>