unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/EventApi__Speaker__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link between the Form Response and the Speaker.</description>
    <inlineHelpText>** System Calculated ** Link between the Form Response and the Speaker.</inlineHelpText>
    <label>Speaker</label>
    <referenceTo>EventApi__Speaker__c</referenceTo>
    <relationshipLabel>Speaker Agreement</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>