unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/EventApi__Sponsor__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link between the Form Response and the Sponsor.</description>
    <inlineHelpText>** System Calculated ** Link between the Form Response and the Sponsor.</inlineHelpText>
    <label>Sponsor</label>
    <referenceTo>EventApi__Sponsor__c</referenceTo>
    <relationshipLabel>Sponsor Agreement</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>