unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/FON_Is_Different_Attendee__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Different_Attendee__c</fullName>
    <formula>IF(AND(EventApi__Attendee__c != null),true,
IF(EventApi__Attendee__r.ContactID__c == PagesApi__Contact__r.Id,false,true)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Different Attendee</label>
    <type>Checkbox</type>
</CustomField>