unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/OrderApi__Assignment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Assignment.</description>
    <inlineHelpText>Link to related Assignment.</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>OrderApi__Assignment__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>