unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/PagesApi__Date__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>** System Calculated ** Identifies the date the form was submitted.</description>
    <inlineHelpText>** System Calculated **  Identifies the date the form was submitted.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>