unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/PagesApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Entity__c</fullName>
    <description>Identifies the &quot;Customer&quot; of the record.</description>
    <inlineHelpText>Identifies the &quot;Customer&quot; of the record.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>