unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/PagesApi__Form__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Identifies the response&#39;s related form.</description>
    <inlineHelpText>** Required ** Identifies the response&#39;s related form.</inlineHelpText>
    <label>Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>