unpackaged/main/default/objects/PagesApi__Form_Response__c/fields/PagesApi__User__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to the User that responded to the Form.</description>
    <inlineHelpText>** System Calculated ** Link to the User that responded to the Form.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>